--- a/.env
+++ b/.env
@@ -1,7 +1,20 @@
+# Gemini API 配置（用于世界生成和意图解析）
 LLM_API_KEY=kimyitao
 LLM_BASE_URL=http://43.153.96.90:7860/v1beta
 WORLD_GEN_MODEL=models/gemini-2.5-flash-lite
 INTENT_MODEL=models/gemini-2.5-flash-lite
+
+# Neo4j 配置
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=mysecretpassword
+
+# 本地 Ollama API 配置（用于对话和嵌入）
+CHAT_API_KEY=ollama
+CHAT_API_BASE=http://127.0.0.1:11434
+CHAT_MODEL=qwen3:14b
+
+# 向量数据库配置
+VECTOR_DB_URL=postgresql+asyncpg://postgres:kimyitao@localhost:5432/smartcleankb
+EMBEDDING_MODEL=nomic-embed-text-v2-moe  # Ollama 嵌入模型（768 维向量）
+EMBEDDING_DIMENSIONS=768  # nomic-embed-text-v2-moe 嵌入维度
