--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,27 @@ version: '3.8'
 
 services:
   neo4j:
-    image: neo4j:latest
-    container_name: game_world_db
+    image: neo4j:5.15
+    container_name: genesis_neo4j
     ports:
-      - "7474:7474" # 浏览器访问
-      - "7687:7687" # Python 代码连接
+      - "7474:7474"
+      - "7687:7687"
     environment:
-      - NEO4J_AUTH=neo4j/mysecretpassword  # 设置你的密码
-      - NEO4J_PLUGINS=["apoc"]             # 自动安装 APOC 插件 (强烈推荐)
+      - NEO4J_AUTH=neo4j/mysecretpassword
+      - NEO4J_PLUGINS=["apoc"]
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
     volumes:
-      - ./neo4j_data:/data                 # 数据持久化
-      - ./neo4j_logs:/logs                 # 日志
-    restart: unless-stopped
+      - ./data/neo4j:/data
+
+  # 假设你本地已有 Postgres，如果没有，取消下面注释使用 Docker 版
+  # postgres:
+  #   image: pgvector/pgvector:pg16
+  #   container_name: genesis_pg
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=kimyitao
+  #     - POSTGRES_DB=smartcleankb
+  #   volumes:
+  #     - ./data/pg:/var/lib/postgresql/data
