--- a/tools/genesis_forge/frontend/package.json
+++ b/tools/genesis_forge/frontend/package.json
@@ -1,23 +1,44 @@
 {
   "name": "genesis-forge-studio",
   "version": "2.0.0",
-  "description": "Genesis Forge Studio - CSV到本体转换平台",
+  "description": "Genesis Forge Studio - 可视化仿真世界构建平台",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cytoscape": "^3.28.0",
-    "vue": "^3.4.0"
+    "pinia": "^2.1.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0",
+    "vue-i18n": "^9.4.0"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.0",
+    "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.0",
+    "prettier": "^3.0.0",
     "tailwindcss": "^3.3.0",
-    "vite": "^5.0.0"
+    "typescript": "^5.0.0",
+    "unplugin-auto-import": "^0.17.0",
+    "unplugin-icons": "^0.17.0",
+    "unplugin-vue-components": "^0.25.0",
+    "vite": "^5.0.0",
+    "vite-plugin-vue-devtools": "^7.0.0",
+    "vue-tsc": "^1.8.0"
   },
   "engines": {
     "node": ">=18.0.0"
