--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # LLM API配置 (云端大模型 - 负责逻辑与规则)
 # 使用兼容OpenAI格式的Gemini API
 LLM_API_KEY=your-api-key-here
-LLM_BASE_URL=http://43.153.96.90:7860/v1beta
+LLM_BASE_URL=http://XXX/v1beta
 
 # 云端模型选择 (负责逻辑推理、意图解析、世界生成)
 WORLD_GEN_MODEL=models/gemini-2.5-flash-lite
