--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Gemini API 配置（用于世界生成和意图解析）
 LLM_API_KEY=kimyitao
-LLM_BASE_URL=http://43.153.96.90:7860/v1beta
+LLM_BASE_URL=http://xxxxx/v1beta
 WORLD_GEN_MODEL=models/gemini-2.5-flash-lite
 INTENT_MODEL=models/gemini-2.5-flash-lite
 
