修复AI Copilot SSE流式响应和连接状态显示
1. 使用DeepSeek流式API实现真正的流式响应
2. 修复前端连接状态显示逻辑
3. 移除硬编码的API密钥，改用环境变量
4. 增加.gitignore排除敏感和临时文件
5. 优化AI响应逐步生成体验
6. 修复模板渲染错误

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-env/
+MANIFEST
+
+# Virtual Environments
 venv/
+env/
 ENV/
 env.bak/
 venv.bak/
@@ -32,48 +35,51 @@ venv.bak/
 *.swo
 *~
 
-# Environment
-.env
-.env.local
-.env.*.local
-
-# Logs
-logs/
-*.log
-src/logs/
-neo4j_logs/
-neo4j_data/
-
-# Test
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Temporary and session files
-SESSION_CONTEXT.md
-NEW_SESSION_PROMPT.md
-diagnose_log_viewer.py
-fix_emoji.py
-test_web_log.py
-start_game.py
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Project specific test files
-test_*.py
-test_brain_collaboration.py
-test_embedding_complete.py
-test_embedding_simple.py
-test_ollama_embedding.py
-test_vector_client_quick.py
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Docker
-docker-compose.override.yml
+# Test coverage
+coverage/
+*.lcov
 
-# Temporary files
-*.tmp
-*.temp
+# Node modules
+node_modules/
+npm-debug.log
+
+# Frontend build
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Local development files
+start_backend.py
+test_sse.html
+nul
+
+# Server logs
+tools/genesis_forge/backend/api/server.log
